--- a/samples/machine-learning/half-moons/HalfMoons.ipynb
+++ b/samples/machine-learning/half-moons/HalfMoons.ipynb
@@ -34,7 +34,7 @@
     "plt.style.use('ggplot')\n",
     "\n",
     "import qsharp\n",
-    "qsharp.packages.add(\"Microsoft.Quantum.MachineLearning::0.28.302812\")\n",
+    "qsharp.packages.add(\"Microsoft.Quantum.MachineLearning::0.28.309445-sdl\")\n",
     "qsharp.reload()\n",
     "\n",
     "from Microsoft.Quantum.Samples import (\n",
